Revision history for MooseX-Extended

{{$NEXT}}

          - We no longer use @_ inside signatured subs

0.10      2022-05-31 22:26:34 CEST

          - Added .gitignore and cleaned up dist.ini (thanks, haarg!)
          - Skip Perl::Tidy tests unless Test::PerlTidy is installed
          - Add some test dependencies for Perl::Critic to dist.ini
          - Add a few more tests to cover edge cases.
          - Convert some die/croak statements to exceptions
          - Fix typos in POD (thanks, bradclawsie!)

0.07      2022-05-27 18:51:42 CEST

          - Fixed bug where passing a reference to a constructor for a cloned
            attribute wouldn't be cloned at first.
          - B::Hooks::AtRuntime and true.pm are not loaded unless required
          - Add CONTRIBUTING.md
          - Test and document that postfix (package Foo {...}) syntax is not
            required and that we can inline multiple packages in the same
            file.

0.06      2022-05-26 14:32:54 CEST

          - Make it very easy to exclude features and include types.

0.05      2022-05-26 10:24:35 CEST

          - Assert a minimum version of various Type:: modules due to CPAN
            test failures from old versions released eight years ago!

0.04      2022-05-25 10:41:10 CEST
          - Moved critic and tidy tests to xt/author to prevent false
            negatives on CPAN testers
          - Use github actions to have proper CI for linux and windows

0.03      2022-05-24 18:28:10 CEST
          - Don't disable namespace::autoclean while using debugger

0.02      2022-05-24 10:06:47 CEST

          - support postderef_qq (thanks, haarg)
          - Fix broken POD name, causing the overview to not be linked

0.01      2022-05-24 09:44:44 CEST

          - Reorganize docs to provide links to a manual
          - Make cloning much more flexible (thanks to Leon Timmermans for
            pointing out that my previous approach wasn't enough).
          - Start adding exceptions